crud con firebase in components

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,33 @@
-<p>products works!</p>
+
+<div style="text-align:center">
+    <h1>
+        Ñam {{ title }}!
+    </h1>
+        
+</div>
+<!--
+    <h2>Opciones: </h2>
+    <ul>
+        <li>
+          <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Mesero</a></h2>
+        </li>
+        <li>
+          <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">Cocina</a></h2>
+        </li>
+        <li>
+          <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Entrega</a></h2>
+        </li>
+    </ul>   -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <app-product></app-product>
+        </div>
+        <div class="col-md-3 text-center">
+            <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
+        </div>
+        <div class="col-md-5 text-center">
+            <app-product-list></app-product-list>
+        </div>
+    </div>
+</div>
