--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -1,1 +1,45 @@
-<p>product works!</p>
+<div class="card mt-2">
+    <div class="card-body">
+        <form #productForm= "ngForm" (ngSubmit)="onSubmit(productForm)">
+            <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="productService.selectedProduct.$key">
+            <div class="form-group">
+                <input 
+                    type="text"
+                    class="form-control"
+                    name="name"
+                    #name="ngModel"
+                    [(ngModel)]="productService.selectedProduct.name"
+                    placeholder="Agrega nombre del producto"
+                >
+            </div>
+            <div class="form-group">
+                <input 
+                    type="text"
+                    class="form-control"
+                    name="category"
+                    #category="ngModel"
+                    [(ngModel)]="productService.selectedProduct.category"
+                    placeholder="Agrega categoria del producto"
+                >
+            </div>
+            <div class="form-group">
+                <input 
+                    type="text"
+                    class="form-control"
+                    name="price"
+                    #price="ngModel"
+                    [(ngModel)]="productService.selectedProduct.price"
+                    placeholder="Agrega precio del producto"
+                >
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-plus-circle"></i> Agregar Producto
+                </button>
+                <button class="btn btn-secondary" type="reset" (click)="reserForm(productForm)">
+                    <i class="fas fa-sync-alt"></i> Borrar
+                </button>
+            </div>   
+        </form>
+    </div>
+</div>
