--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+padding: 0%;
+margin: 0%;
+}
+
+body {
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+    background-image: url(https://image.freepik.com/foto-gratis/pano-cocina-mesa-madera_74190-968.jpg);
+    background-repeat: no-repeat;
+}
