example slider in app.component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <!-- <app-product></app-product> -->
+                <!-- <app-carousel></app-carousel> -->
             </div>
             <div class="col-md-3 text-center mt-5">
-                <h2> Bienvenido{{ title }}!</h2>
+                <h2> Welcome</h2>
                 <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
             </div>
             <div class="col-md-5 text-center">
@@ -13,8 +13,4 @@
             </div>
         </div>
     </div>
-    <!-- <div style="text-align:center" class="container mt-2">
-        <h2>
-            Ñam Ñam {{ title }}!
-        </h2>  
-    </div> -->
+ 
