--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,5 +1,5 @@
 <!-- Un por mientras -->
-<div class="col-md-12 text-center mt-5">
+<!-- <div class="col-md-12 text-center mt-5">
     <button class="btn btn-success" style="margin-left: 10px">
         <a routerLink="/home" routerLinkActive="active">
             <i class="fas fa-arrow-left"></i><h5>Regresar</h5>
@@ -7,4 +7,20 @@
     </button>
     <h2>Cocina en construcción...</h2>
     <img width="800" alt="Cat status" src="https://i.kym-cdn.com/photos/images/original/000/236/738/016.jpg">
+</div> -->
+<div class="container">
+    <div class="row">
+        <!-- <div class="col-md-4">
+            <app-product></app-product>
+        </div> -->
+        <div class="col-md-6 text-center mt-5">
+            <app-product-list></app-product-list>
+        </div>
+        <div class="col-md-6 text-center mt-5">
+            <h2> Food </h2>
+            <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
+        </div>
+        
+    </div>
 </div>
+
