--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -5,8 +5,9 @@ h1 {
     
 
 }
- h5 {
-    color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
+
+h5 {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
