configuring other service,changing slider images

--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -1,4 +1,4 @@
-<!-- Un por mientras -->
+<!-- Un por mientras or First Option-->
 <!-- <div class="col-md-12 text-center mt-5">
     <button class="btn btn-success" style="margin-left: 10px">
         <a routerLink="/home" routerLinkActive="active">
@@ -8,19 +8,18 @@
     <h2>Cocina en construcción...</h2>
     <img width="800" alt="Cat status" src="https://i.kym-cdn.com/photos/images/original/000/236/738/016.jpg">
 </div> -->
+<!-- Second Option -->
 <div class="container">
-    <div class="row">
-        <!-- <div class="col-md-4">
-            <app-product></app-product>
-        </div> -->
-        <div class="col-md-6 text-center mt-5">
-            <app-product-list></app-product-list>
-        </div>
-        <div class="col-md-6 text-center mt-5">
-            <h2> Food </h2>
-            <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
-        </div>
-        
-    </div>
+  <div class="row">
+      <div class="col-md-4">
+          <app-product></app-product>
+      </div>
+      <div class="col-md-8 text-center">
+          <app-product-list></app-product-list>
+      </div>
+      <div class="col-md-3 text-center mt-5">
+        <h2> Food </h2>
+        <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
+      </div>
+  </div>
 </div>
-
