--- a/src/app/components/kitchen/product-list/product-list.component.html
+++ b/src/app/components/kitchen/product-list/product-list.component.html
@@ -7,12 +7,12 @@
                     <td>{{product.name}}</td>
                     <td>{{product.category}}</td>
                     <td>{{product.price}}</td>
-                    <!-- <a class="btn btn-secondary text-while" (click)="onEdit(product)">
+                    <a class="btn btn-secondary text-while" (click)="onEdit(product)">
                         <i class="fas fa-edit"></i>
                     </a>
                     <a class="btn btn-danger text-while" (click)="onDelete(product.$key)">
                         <i class="fas fa-trash-alt"></i>                            
-                    </a> -->
+                    </a>
                 </tr>
             </tbody>
         </table>
