--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,54 @@
-<!-- Landing -->
-<div class="container">
+<!-- First Option-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-8 mt-5">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../../../assets/images/burger.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../../../assets/images/burger1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../../../assets/images/burger2.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 text-center mt-5">
+            <h2> Welcome</h2>
+            <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
+        </div>
+    </div>
+  </div>
+  <!-- Second Option -->
+<!-- <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <!-- <app-carousel></app-carousel> -->
+                <app-product></app-product>
             </div>
             <div class="col-md-3 text-center mt-5">
                 <h2> Welcome</h2>
                 <img width="200" alt="Burger Logo" src="https://i.ibb.co/6Xt3x4K/BURGUER-QUEEN3-PNG.png">
             </div>
             <div class="col-md-5 text-center">
-                <!-- <app-product-list></app-product-list> -->
+                <app-product-list></app-product-list>
             </div>
         </div>
-    </div>
- 
+    </div> -->
+
+<!--Tercer Option -->
